--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "zokou-2.0",
-  "version": "2.0.0",
+  "name": "famous-md",
+  "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "type": "commonjs",
